# hComicFetcher

./: .gitignore  Fetcher.hs  README.rst  Tests.hs  Types.hs  hComicFetcher.cabal  main.hs  stack.yaml
Parser/: VolChpParser.hs  VolChpPrinter.hs  Words.hs
Sites/: Batoto.hs  Comic.hs  DoesNotPlayWellWithOthers.hs  ErrantStory.hs  ExploitationNow.hs  GirlGenius.hs  GunnerkrigCourt.hs  Util.hs
src/: Fetcher.hs  Interpreter.hs  Main.hs  Sites.hs  Tests.hs  Types.hs
src/Parser/: VolChpParser.hs  VolChpPrinter.hs
src/Sites/: AmyaChronicles.hs  Batoto.hs  Comic.hs  DenizensAttention.hs  Disenchanted.hs  DoesNotPlayWellWithOthers.hs  ErrantStory.hs  ExploitationNow.hs  FeyWinds.hs  FreakAngels.hs  GirlGenius.hs  GunnerkrigCourt.hs  TryingHuman.hs  Util.hs  notes.txt
