name:               hComicFetcher
version:            0.1.0.0
synopsis:           Library and application for downloading webcomic into cbz so they can be enjoyed on the kindle/ipad.
license:            GPL-3
license-file:       LICENSE
author:             Anja Berens
maintainer:         pharaun666@gmail.com
category:           System
build-type:         Simple
cabal-version:      >=1.10

executable hComicFetcher
    main-is:            Main.hs
    default-language:   Haskell2010
    ghc-options:       -Wall -fno-warn-missing-signatures -rtsopts -threaded
    hs-source-dirs:     src

    build-depends:      base >=4.5 && <4.8
                      , HUnit >=1.2.5.2 && <1.3
                      , QuickCheck >=2.8.1 && <2.9
                      , bytestring >=0.10.0.2 && <0.11
                      , conduit >=1.0.17.1 && <1.1
                      , cryptohash >=0.11.6 && <0.12
                      , exceptions >=0.8.0.2 && <0.9
                      , failure >=0.2.0.3 && <0.3
                      , filesystem-conduit >=1.0.0.2 && <1.1
                      , http-conduit >=2.0.0.10 && <2.1
                      , http-types >=0.8.6 && <0.9
                      , hxt >=9.3.1.15 && <9.4
                      , hxt-tagsoup >=9.1.3 && <9.2
                      , network >=2.4.1.2 && <2.5
                      , parsec >=3.1.3 && <3.2
                      , safe >=0.3.8 && <0.4
                      , split >=0.2.2 && <0.3
                      , stm >=2.4.2 && <2.5
                      , stm-chans >=3.0.0.3 && <3.1
                      , stm-conduit >=2.5.4 && <2.6
                      , system-fileio >=0.3.16.2 && <0.4
                      , system-filepath >=0.4.13.2 && <0.5
                      , text >=0.11.3.1
                      , time >=1.4.0.1 && <1.5
                      , transformers >=0.3.0.0 && <0.4
                      , utf8-string >=0.3.7 && <0.4

                      -- New dependencies
                      , wreq >= 0.3.0.0
                      , hexpat-lens >= 0.1.3
                      , taggy-lens >= 0.1.2
                      , taggy >= 0.1.4
