name:               hComicFetcher
version:            0.1.0.0
synopsis:           Library and application for downloading webcomic into cbz so they can be enjoyed on the kindle/ipad.
license:            GPL-3
license-file:       LICENSE
author:             Anja Berens
maintainer:         pharaun666@gmail.com
category:           System
build-type:         Simple
cabal-version:      >=1.10

executable hComicFetcher
    main-is:            Main.hs
    default-language:   Haskell2010
    ghc-options:       -Wall -fno-warn-missing-signatures -rtsopts -threaded
    hs-source-dirs:     src

    build-depends:      base >=4.5 && <4.8
                      , HUnit >=1.2.5.2
                      , QuickCheck >=2.8.1
                      , bytestring >=0.10.0.2
                      , conduit >=1.0.17.1
                      , cryptohash >=0.11.6
                      , exceptions >=0.8.0.2
                      , failure >=0.2.0.3
                      , conduit-combinators
                      --, wreq >= 0.3.0.0
                      , http-conduit >=2.0.0.10
                      , http-types >=0.8.6
                      , hxt >=9.3.1.15
                      , hxt-tagsoup >=9.1.3
                      , network >=2.4.1.2
                      , parsec >=3.1.3
                      , safe >=0.3.8
                      , split >=0.2.2
                      , stm >=2.4.2
                      , stm-chans >=3.0.0.3
                      , stm-conduit >=2.5.4
                      , system-fileio >=0.3.16.2
                      , system-filepath >=0.4.13.2
                      , text >=0.11.3.1
                      , time >=1.4.0.1
                      , transformers >=0.3.0.0
                      , utf8-string >=0.3.7

                      -- New dependencies
                      , hexpat-lens >= 0.1.3
                      , hexpat-tagsoup
                      , hexpat
                      , taggy-lens >= 0.1.2
                      , taggy >= 0.1.4
                      , lens >= 4.9.1
                      , tagsoup
                      , fast-tagsoup

                      , html-conduit
                      , xml-html-conduit-lens

                      , containers

                      -- Other parsers
                      , tagchup
                      , HaXml
                      , xml-basic
